# flowstate

./: .dir-locals.el  .gitattributes  .gitignore  .pre-commit-config.yaml  MANIFEST.in  Pipfile  ReadMe.org  pyproject.toml  setup.py  tasks.py
.artifacts/assets/: test_php5-fpm.dot  test_php5-fpm.json  test_postgresql.dot  test_postgresql.json
.status/: refile.org  refile_flowstate.org
docs/: ReadMe.md
flowstate/: __init__.py  __main__.py  client_cli.py  test_graph.py
